--- a/config.json
+++ b/config.json
@@ -81,7 +81,7 @@
     "favorites": {
         "favorites": [
             {
-                "name": "Mario Souto - Dev Soutinho",
+                "name": "Mario Souto",
                 "url": "https://www.youtube.com/c/DevSoutinho",
                 "img": "https://yt3.ggpht.com/m8Yrqf0Y81L4mZ1Cq7rGnJ4NDHe6729rxiFZvWyy9-xd_Z7Osmza7J8NWpN1axMHcCb1oKJNgA=s88-c-k-c0x00ffffff-no-rj"
             },
